test/errors/expr_dict_star_key.py
def bam():
    return {*4: 5}
