test/errors/expr_dict_star_key.py.expected
test/errors/expr_dict_star_key.py:2 error: starred expression not allowed here
